fix: Fix addToCart JavaScript syntax error - line break in string

--- a/src/Nobetci.Web/Views/QrMenu/ViewMenu.cshtml
+++ b/src/Nobetci.Web/Views/QrMenu/ViewMenu.cshtml
@@ -648,8 +648,7 @@
                         
                         @if (Model.CanOrder && item.InStock)
                         {
-                            <button class="add-btn" onclick="addToCart(@item.Id, '@item.Name.Replace("'", "\\'")
-', @(item.DiscountedPrice ?? item.Price))">+</button>
+                            <button class="add-btn" onclick="addToCart(@item.Id, '@item.Name.Replace("'", "\\'")', @(item.DiscountedPrice ?? item.Price))">+</button>
                         }
                     </div>
                 }
