fix: Fix DailyReport DateTime.Date PostgreSQL issue + add using directive
- Fixed DateTime.Date comparison in DailyReport (same issue as Orders)
- Added @using Nobetci.Web.Data.Entities to DailyReport.cshtml

--- a/src/Nobetci.Web/Views/QrMenu/DailyReport.cshtml
+++ b/src/Nobetci.Web/Views/QrMenu/DailyReport.cshtml
@@ -1,4 +1,5 @@
 @model DailyReportViewModel
+@using Nobetci.Web.Data.Entities
 @{
     ViewData["Title"] = "Gün Sonu Raporu";
     Layout = "_AppLayout";
